--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "tape": "3.5.0"
   },
   "dependencies": {
+    "lodash.difference": "3.0.1",
     "lodash.has": "3.0.0",
+    "lodash.size": "3.0.0",
     "tipe": "0.1.12"
   }
 }
