--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lodash.difference": "3.0.1",
     "lodash.has": "3.0.0",
     "lodash.size": "3.0.0",
+    "mongodb": "1.4.34",
     "tipe": "0.1.12"
   }
 }
