--- a/package.json
+++ b/package.json
@@ -25,9 +25,7 @@
     "tape": "3.5.0"
   },
   "dependencies": {
-    "lodash.difference": "3.0.1",
-    "lodash.has": "3.0.0",
-    "lodash.size": "3.0.0",
+    "lodash": "3.5.0",
     "mongodb": "1.4.34",
     "tipe": "0.1.12"
   }
