--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "tape": "3.5.0"
   },
   "dependencies": {
-    "dev-null-stream": "0.0.1",
     "lodash": "3.5.0",
     "mongodb": "1.4.34",
-    "through2": "1.1.1",
+    "mux": "0.0.2",
+    "through2-spy": "1.2.0",
     "tipe": "0.1.12"
   }
 }
