--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "dependencies": {
     "lodash": "3.5.0",
     "mongodb": "1.4.34",
-    "mux": "0.0.2",
+    "terminus": "1.0.11",
     "through2-spy": "1.2.0",
     "tipe": "0.1.12"
   }
