--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "tape": "3.5.0"
   },
   "dependencies": {
+    "cradle": "0.6.9",
     "lodash": "3.5.0",
     "mongodb": "1.4.34",
+    "stream-array": "1.0.1",
     "terminus": "1.0.11",
     "through2-spy": "1.2.0",
     "tipe": "0.1.12"
