--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
   "author": "Peter Lyons <pete@peterlyons.com> (http://peterlyons.com/)",
   "license": "Copyright 2015 Peter Lyons LLC",
   "devDependencies": {
-    "eslint": "0.16.2",
+    "eslint": "0.21.2",
     "stats": "1.0.0",
     "tap-spec": "2.2.2",
     "tape": "3.5.0"
   },
   "dependencies": {
     "cradle": "0.6.9",
+    "get-port": "1.0.0",
+    "inquirer": "0.8.5",
+    "joi": "6.4.2",
     "lodash": "3.5.0",
     "minimist": "1.1.1",
     "mongodb": "1.4.34",
