--- a/package.json
+++ b/package.json
@@ -21,23 +21,24 @@
   "author": "Peter Lyons <pete@peterlyons.com> (http://peterlyons.com/)",
   "license": "Copyright 2015 Peter Lyons LLC",
   "devDependencies": {
-    "eslint": "0.21.2",
+    "eslint": "1.7.3",
+    "npm-check-updates": "2.3.4",
     "stats": "1.0.0",
-    "tap-spec": "2.2.2",
-    "tape": "3.5.0"
+    "tap-spec": "4.1.0",
+    "tape": "4.2.2"
   },
   "dependencies": {
     "argv-split": "0.1.1",
     "cradle": "0.6.9",
-    "get-port": "1.0.0",
-    "inquirer": "0.8.5",
-    "joi": "6.4.2",
-    "lodash": "3.5.0",
-    "minimist": "1.1.1",
-    "mongodb": "2.0.33",
-    "stream-array": "1.0.1",
-    "terminus": "1.0.11",
-    "through2-spy": "1.2.0",
+    "get-port": "2.0.0",
+    "inquirer": "0.11.0",
+    "joi": "6.9.1",
+    "lodash": "3.10.1",
+    "minimist": "1.2.0",
+    "mongodb": "2.0.46",
+    "stream-array": "1.1.1",
+    "terminus": "1.0.12",
+    "through2-spy": "2.0.0",
     "tipe": "0.1.12"
   }
 }
