--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "license": "Copyright 2015 Peter Lyons LLC",
   "devDependencies": {
     "eslint": "1.7.3",
+    "eslint-config-standard": "4.4.0",
+    "eslint-plugin-standard": "1.3.1",
     "npm-check-updates": "2.3.4",
     "stats": "1.0.0",
     "tap-spec": "4.1.0",
