--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
   "author": "Peter Lyons <pete@peterlyons.com> (http://peterlyons.com/)",
   "license": "Copyright 2015 Peter Lyons LLC",
   "devDependencies": {
+    "esformatter": "0.7.3",
+    "esformatter-literal-notation": "1.0.1",
+    "esformatter-parseint": "1.0.3",
+    "esformatter-quotes": "1.0.3",
+    "esformatter-var-each": "2.1.0",
     "eslint": "1.7.3",
     "eslint-config-standard": "4.4.0",
     "eslint-plugin-standard": "1.3.1",
