--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "description": "Finds dirt on your data",
   "scripts": {
-    "lint": "eslint .",
-    "stats": "stats -T patterns scan types *.js",
-    "test": "tape *.test.js **/*.test.js | tap-spec"
+    "lint": "./bin/lint.sh",
+    "build": "./bin/build.sh",
+    "clean": "./bin/clean.sh",
+    "stats": "./bin/stats.sh",
+    "test": "./bin/test.sh"
   },
   "repository": {
     "type": "git",
@@ -20,7 +22,7 @@
   ],
   "author": "Peter Lyons <pete@peterlyons.com> (http://peterlyons.com/)",
   "bin": {
-    "white-glove": "./cli.js"
+    "white-glove": "./src/cli.js"
   },
   "license": "Copyright 2015 Peter Lyons LLC",
   "devDependencies": {
@@ -32,9 +34,8 @@
     "eslint": "1.10.3",
     "eslint-config-standard": "4.4.0",
     "eslint-plugin-standard": "1.3.1",
-    "stats": "1.0.0",
-    "tap-spec": "4.1.0",
-    "tape": "4.4.0"
+    "prova": "2.1.2",
+    "stats": "1.0.0"
   },
   "dependencies": {
     "argv-split": "0.1.1",
