--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "ssh://git.peterlyons.com/home/plyons/projects/carson/white-glove.git"
+    "url": "https://github.com/focusaurus/white-glove"
   },
   "keywords": [
     "integrity",
@@ -24,6 +24,9 @@
   "bin": {
     "white-glove": "./src/cli.js"
   },
+  "files": [
+    "src"
+  ],
   "license": "Copyright 2015 Peter Lyons LLC",
   "devDependencies": {
     "esformatter": "0.7.3",
