--- a/package.json
+++ b/package.json
@@ -29,22 +29,23 @@
   ],
   "license": "Copyright 2015 Peter Lyons LLC",
   "devDependencies": {
-    "eslint": "2.4.0",
-    "eslint-config-standard": "5.1.0",
+    "eslint": "2.10.2",
+    "eslint-config-standard": "5.3.1",
     "eslint-plugin-standard": "1.3.2",
-    "prova": "2.1.2",
-    "stats": "1.0.0"
+    "stats": "1.0.0",
+    "tape": "4.5.1",
+    "tape-catch": "1.0.5"
   },
   "dependencies": {
-    "argv-split": "1.0.0",
+    "argv-split": "1.0.1",
     "cradle": "0.7.1",
     "get-port": "2.1.0",
-    "inquirer": "0.12.0",
-    "joi": "8.0.4",
-    "lodash": "4.6.1",
+    "inquirer": "1.0.2",
+    "joi": "8.1.1",
+    "lodash": "4.13.1",
     "minimist": "1.2.0",
-    "mongodb": "2.1.7",
-    "stream-array": "1.1.1",
+    "mongodb": "2.1.20",
+    "stream-array": "1.1.2",
     "terminus": "1.1.0",
     "through2-spy": "2.0.0",
     "tipe": "0.1.12"
